Fix Sonar warnings in CustomMultiResolutionImage